# metatrade

./: .env.example  .gitignore  CLAUDE.md  Makefile  pyproject.toml
.claude/: settings.local.json
docs/: SYSTEM_OVERVIEW.md  TECHNICAL_REVIEW.md  model.md  plan.md  plan_distributed_training.md  plan_forex_hardening.md  plan_massive_forex_data.md  plan_ml_model_upgrade.md  plan_model_lifecycle.md  plan_telegram.md  review.md
docs/test/: test.http
scripts/: backfill_massive_mongo.py  backtest.py  diag_modules.py  fetch_massive_bars.py  kill_switch_cli.py  run_dashboard.py  run_live.py  run_massive_backfill_batches.py  run_paper.py  trade_report.py  train.py  train_worker.py  walk_forward_validation.py
src/metatrade/: __init__.py
tests/: conftest.py
tests/alerting/: test_command_handler.py  test_command_receiver.py  test_telegram_alerter.py
tests/broker/: test_mt5_adapter.py  test_mt5_adapter_positions.py  test_paper_broker.py
tests/consensus/: test_adaptive_threshold.py  test_consensus_engine.py  test_engines.py  test_market_accuracy.py
tests/core/: test_clock.py  test_config_base.py  test_enums.py  test_event_bus.py  test_versioning.py
tests/execution/: test_idempotency_guard.py  test_order_manager.py
tests/exit_engine/: test_contracts.py  test_engine.py  test_reputation.py
tests/intermarket/: test_clustering.py  test_correlation.py  test_engine.py  test_exposure.py  test_intermarket.py  test_persistence.py
tests/market_data/: test_config.py  test_gap_detector.py  test_massive_http_client.py  test_massive_provider.py  test_normalizer.py
tests/ml/: test_artifacts.py  test_calibration.py  test_classifier_contracts.py  test_contracts.py  test_evaluation.py  test_exit_profile_contracts.py  (+16 more)
(+233 files in other folders)
