[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metatrade"
version = "0.1.0"
description = "Professional algorithmic Forex trading platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=23.3",
    "python-dotenv>=1.0",
    "fastapi>=0.121",
    "uvicorn>=0.38",
    "jinja2>=3.1",
    "duckdb>=1.0",
    "psutil>=5.9",
    "concurrent-log-handler>=0.9.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.4",
]
live = [
    "MetaTrader5>=5.0",
    "scikit-learn>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metatrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/metatrade",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
source = ["src/metatrade"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/collectors/csv_collector.py",   # requires real CSV files on disk
    "*/collectors/mt5_collector.py",   # requires Windows + MetaTrader5
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
